Fix build warnings
- Remove deprecated PathMatchConfigurer. setUseSuffixPatternMatch(false) is now the default in Spring, cf https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/web/servlet/config/annotation/PathMatchConfigurer.html#isUseSuffixPatternMatch()).
- Replace deprecated ReaderInputStream with ReaderInputStream.builder()
- Replace deprecated XMLReaderFactory with SAXParserFactory
- Replace deprecated Integer(string) with Integer.parseInt(string)
- Replace deprecated URL() constructor with URI().toURL()
- Replace deprecated string-based Runtime.getRuntime().exec() with its
  array-based variant
- Add @SuppressWarnings("unchecked") in all places with an "unchecked"
  warning. This is not ideal but we lack of a better alternative.